--- a/progs/scr2ifm.pod
+++ b/progs/scr2ifm.pod
@@ -199,13 +199,13 @@ The first map section is the one that contains the very first room, and
 will have a default name unless you give it one using another 'map'
 command.
 
-=item item <name> <attrs>
+=item item name [attrs]
 
 Declare an item in the current room.  The name must be in double-quotes.
 If you don't give it a tag attribute, one is generated automatically by
 changing all invalid tag characters in the name to underscores.
 
-=item item <attrs>
+=item item [attrs]
 
 Add the given attributes to the last declared item, if any.
 
@@ -213,12 +213,12 @@ Add the given attributes to the last declared item, if any.
 
 Delete the last declared item, if any.
 
-=item task <name> <attrs>
+=item task name [attrs]
 
 Declare a task in the current room in a similar manner to items.  The name
 must be in double-quotes.
 
-=item task <attrs>
+=item task [attrs]
 
 Add the given attributes to the last declared task, if any.
 
@@ -237,7 +237,9 @@ resulting transcript (or delete the item/task and do it again).
 The map produced by B<scr2ifm> will not be perfect in a lot of cases.  When
 running it through B<ifm> you might get warnings about overlapping rooms,
 or crossed link lines.  These problems are usually fixed by stretching the
-link lines of some of the rooms.
+link lines of some of the rooms.  Some overlapping-room problems are caused
+by the program making a bad choice of direction to put an up/down/in/out
+connection in.  However, you can override its choice.
 
 You can customize the results you get from a transcript by creating a
 command file and specifying it with the B<-c> option (or, alternatively,
@@ -255,36 +257,36 @@ variable).  Here's a list of available parameters, and their defaults:
 
 =over 4
 
-=item $name_maxwords (default: 8)
+=item $name_maxwords (default: C<8>)
 
 Maximum no. of words in a room name.
 
-=item $name_maxuncap (default: 3)
+=item $name_maxuncap (default: C<3>)
 
 Maximum length of an uncapitalized word in a room name.
 
-=item $name_invalid (default: '[.!?]')
+=item $name_invalid (default: C<'[.!?]'>)
 
 Regexp matching an invalid room name.
 
-=item $desc_minwords (default: 20)
+=item $desc_minwords (default: C<20>)
 
 Minimum no. of matching words required to match a room description.
 
-=item $cmd_prompt (default: '^>\s*')
+=item $cmd_prompt (default: C<'^E<gt>\s*'>)
 
 Regexp matching a command prompt.
 
-=item $cmd_look (default: '^l(ook)?$')
+=item $cmd_look (default: C<'^l(ook)?$'>)
 
 Regexp matching a 'look' command (case-insensitive).
 
-=item $cmd_undo (default: '^undo$')
+=item $cmd_undo (default: C<'^undo$'>)
 
 Regexp matching an UNDO command (case-insensitive).  It's assumed that only
 a single level of UNDO is available.
 
-=item $cmd_teleport (default: '^(restart|restore)$')
+=item $cmd_teleport (default: C<'^(restart|restore)$'>)
 
 Regexp matching commands that are known to cause a teleport to an arbitrary
 room (case-insensitive).
@@ -295,6 +297,284 @@ If a command isn't recognized as a parameter command, it's assumed to be an
 B<ifm> command, and is passed straight into the output verbatim.  You can
 use these to resolve conflicts in the generated map, by stretching certain
 links or hiding them altogether.
+
+=head1 EXAMPLE
+
+Here's a simple example of B<scr2ifm> in action.  You might recognize the
+IF game involved.  First, the transcript in file F<advent.scr> (with
+annotation):
+
+    Start of a transcript of
+    ADVENTURE
+    The Interactive Original
+    By Willie Crowther and Don Woods (1977)
+    David M. Baggett's 1993 reconstruction, ported by Graham Nelson
+    Release 3 / Serial number 951220 / Inform v1502 Library 5/12
+    Interpreter 1 Version B / Library serial number 951024
+
+    >verbose
+    ADVENTURE is now in its "verbose" mode, which always gives
+    long descriptions of locations (even if you've been there
+    before).
+
+    >l
+
+    At End Of Road
+    You are standing at the end of a road before a small brick
+    building. Around you is a forest. A small stream flows out
+    of the building and down a gully.
+
+The previous two commands are recommended after starting the transcript.
+
+    >e
+
+    Inside Building
+    You are inside a building, a well house for a large spring.
+
+    There are some keys on the ground here.
+
+    There is tasty food here.
+
+    There is a shiny brass lamp nearby.
+
+    There is an empty bottle here.
+
+    >item "keys"
+    That's not a verb I recognise.
+
+    >item "food"
+    That's not a verb I recognise.
+
+    >item "lamp"
+    That's not a verb I recognise.
+
+    >item "bottle"
+    That's not a verb I recognise.
+
+The previous four commands declare the given items to the program.  You
+don't have to bother with this if you don't want item locations on your
+map.
+
+    >get all
+    stream: You have nothing in which to carry the water.
+    well house: That's hardly portable.
+    spring: That's hardly portable.
+    pair of 1 foot diameter sewer pipes: That's hardly portable.
+    set of keys: Taken.
+    tasty food: Taken.
+    brass lantern: Taken.
+    small bottle: Taken.
+
+    >w
+
+    At End Of Road
+    You are standing at the end of a road before a small brick
+    building. Around you is a forest. A small stream flows out
+    of the building and down a gully.
+
+    >s
+
+    In A Valley
+    You are in a valley in the forest beside a stream tumbling
+    along a rocky bed.
+
+    >s
+
+    At Slit In Streambed
+    At your feet all the water of the stream splashes into a
+    2-inch slit in the rock. Downstream the streambed is bare
+    rock.
+
+    >s
+
+    Outside Grate
+    You are in a 20-foot depression floored with bare dirt. Set
+    into the dirt is a strong steel grate mounted in concrete. A
+    dry streambed leads into the depression.
+
+    >unlock grate
+    What do you want to unlock the steel grate with?
+
+    >keys
+    You unlock the steel grate.
+
+    >task "Unlock grate" need keys
+    That's not a verb I recognise.
+
+That last command declared a task -- again, you don't have to bother with
+this if you don't want to.
+
+    >open grate
+    You open the steel grate.
+
+    >task "Open grate" after last
+    That's not a verb I recognise.
+
+    >d
+
+    Below the Grate
+    You are in a small chamber beneath a 3x3 steel grate to the
+    surface. A low crawl over cobbles leads inward to the west.
+
+    The grate stands open.
+
+    >w
+
+    In Cobble Crawl
+    You are crawling over cobbles in a low passage. There is a
+    dim light at the east end of the passage.
+
+    There is a small wicker cage discarded nearby.
+
+    >item "cage"
+    That's not a verb I recognise.
+
+    >get cage
+    Taken.
+
+    >w
+
+    Darkness
+    It is pitch dark, and you can't see a thing.
+
+    >undo
+    In Cobble Crawl
+    [Previous turn undone.]
+
+Oops!  Stumbled into the dark by mistake.  Without the UNDO, that would
+have meant 'Darkness' appeared on the map as a room.
+
+    >turn lamp on
+    You switch the brass lantern on.
+
+    >w
+
+    In Debris Room
+    You are in a debris room filled with stuff washed in from
+    the surface. A low wide passage with cobbles becomes plugged
+    with mud and debris here, but an awkward canyon leads upward
+    and west.
+
+    A note on the wall says, "Magic word XYZZY."
+
+    A three foot black rod with a rusty star on one end lies
+    nearby.
+
+    >item "black rod" tag rod
+    That's not a verb I recognise.
+
+    >xyzzy
+
+    Inside Building
+    You are inside a building, a well house for a large spring.
+
+Goodness me!  That was unexpected -- you've been teleported.  The link
+almost certainly won't look good on the map.  You have the option of
+UNDOing, right now, or fixing the map later.  Let's do the latter.
+
+    >xyzzy
+
+    In Debris Room
+    You are in a debris room filled with stuff washed in from
+    the surface. A low wide passage with cobbles becomes plugged
+    with mud and debris here, but an awkward canyon leads upward
+    and west.
+
+    A note on the wall says, "Magic word XYZZY."
+
+    A three foot black rod with a rusty star on one end lies
+    nearby.
+
+    >get rod
+    Taken.
+
+    >w
+
+    Sloping E/W Canyon
+    You are in an awkward sloping east/west canyon.
+
+    >w
+
+    Orange River Chamber
+    You are in a splendid chamber thirty feet high. The walls
+    are frozen rivers of orange stone. An awkward canyon and a
+    good passage exit from east and west sides of the chamber.
+
+    A cheerful little bird is sitting here singing.
+
+    >item "bird"
+    That's not a verb I recognise.
+
+    >unscript
+
+    End of transcript.
+
+Ok, now to create a map.  To do that, use this command:
+
+    scr2ifm -o advent.ifm advent.scr
+
+To check for problems, just type:
+
+    ifm advent.ifm
+
+On the first run through, there are complaints about an overlapping room,
+due to a bad choice of direction for the 'down' link from Outside Grate,
+and the expected problems with the link between the Debris Room and the
+Building.  A command file, F<advent.cmd>, will fix these problems:
+
+    # Fix bad choice of direction.
+    link BG dir s;
+
+    # Hide "xyzzy" link.
+    link IDR_IB hidden;
+
+    # Replace it with join.
+    join IDR to IB cmd "xyzzy";
+
+Now, if we invoke
+
+    scr2ifm -o advent.ifm -i -c advent.cmd advent.scr
+
+we get the following map:
+
+    ## IFM map created by scr2ifm.pl
+
+    ## Commands generated by transcript.
+    room "At End Of Road" tag AEOR;
+
+    room "Inside Building" dir e from AEOR tag IB;
+      item "keys" tag keys;
+      item "food" tag food;
+      item "lamp" tag lamp;
+      item "bottle" tag bottle;
+
+    room "In A Valley" dir s from AEOR tag IAV;
+
+    room "At Slit In Streambed" dir s from IAV tag ASIS;
+
+    room "Outside Grate" dir s from ASIS tag OG;
+      task "Unlock grate" need keys tag Unlock_grate;
+      task "Open grate" after last tag Open_grate;
+
+    room "Below the Grate" dir n from OG go down tag BG;
+
+    room "In Cobble Crawl" dir w from BG tag ICC;
+      item "cage" tag cage;
+
+    room "In Debris Room" dir w from ICC tag IDR;
+      item "black rod" tag rod;
+
+    link IDR to IB dir n s cmd "xyzzy" tag IDR_IB;
+
+    room "Sloping E/W Canyon" dir w from IDR tag SEC;
+
+    room "Orange River Chamber" dir w from SEC tag ORC;
+      item "bird" tag bird;
+
+    ## Customization commands.
+    link BG dir s;
+    link IDR_IB hidden;
+    join IDR to IB cmd "xyzzy";
 
 =head1 RESTRICTIONS
 
